# redmine-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  package.json
.github/workflows/: ci.yml  release.yml
docs/: api-coverage.md  client-configuration.md  promotion-post.md  prompt-cookbook.md
scripts/: check.sh  install-local.sh  install.cmd  install.ps1  install.sh  package-binary.sh  package-release.sh
server/: index.js
src/: config.rs  lib.rs  main.rs  redmine.rs
src/tools/: attachments.rs  catalog.rs  checklists.rs  issues.rs  mod.rs  projects.rs  relations.rs  time_entries.rs  versions.rs  watchers.rs  wiki.rs
src/tools/catalog/: mod.rs  schema.rs
test/: redmine.test.js
tests/: stdio.rs
