[package]
name = "redmine-mcp-server"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Standalone stdio MCP server for Redmine."

[[bin]]
name = "redmine-mcp-server"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
url = "2"
