[package]
name = "redmine-mcp-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Standalone stdio MCP server for Redmine."
repository = "https://github.com/weirdo-adam/redmine-mcp-server"
homepage = "https://github.com/weirdo-adam/redmine-mcp-server"
readme = "README.md"
keywords = ["redmine", "mcp", "claude", "codex", "issue-tracker"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "redmine-mcp-server"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
url = "2"
